[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-token-tester"
version = "0.1.0"
description = "MCP Test Harness: Token-Aware Tooling for Developers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "forgxyz", email = "jack@forgash.io"},
]
dependencies = [
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.7.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-test = "mcp_token_tester.main:cli"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true